<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Rondas.Tematica1Activity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tematica_mc1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:paddingTop="18dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="16dp">


        <Spinner
            android:id="@+id/t1mc1p1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/t1mc1p2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/t1mc1p3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/t1mc1p4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/flow"
                android:gravity="center"
                android:textSize="12sp"/>

            <Spinner
                android:id="@+id/t1mc1e1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/escena"
                android:gravity="center"
                android:textSize="12sp"/>

            <Spinner
                android:id="@+id/t1mc1e2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/skills"
                android:gravity="center"
                android:textSize="12sp"/>

            <Spinner
                android:id="@+id/t1mc1e3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/tematica_mc2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:paddingTop="18dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="16dp">

        <Spinner
            android:id="@+id/t1mc2p1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/t1mc2p2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/t1mc2p3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/t1mc2p4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/flow"
                android:gravity="center"
                android:textSize="12sp"/>

            <Spinner
                android:id="@+id/t1mc2e1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/escena"
                android:gravity="center"
                android:textSize="12sp"/>

            <Spinner
                android:id="@+id/t1mc2e2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/skills"
                android:gravity="center"
                android:textSize="12sp"/>

            <Spinner
                android:id="@+id/t1mc2e3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnTematica1Continuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/button"
        android:text="@string/btnContinuar"
        android:layout_marginBottom="8dp"/>

</LinearLayout>